--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <li><a href="#counts"><i class="bx bx-book-content"></i> <span>Facts</span></a></li>
         <li><a href="#services"><i class="bx bx-server"></i> <span>Working On</span></a></li>
         <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-        <li><a href="#certificate"><i class='bx bxs-florist'></i> <span>Certificates</span></a></li>
+        <li><a href="#certificate"><i class='bx bxs-florist'></i> <span>Events</span></a></li>
         <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
@@ -91,7 +91,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Raj Kumar Sony</h1>
-      <p>I'm <span class="typed" data-typed-items="Graphics Designer, Programmer, AI Developer, Freelancer, Bugs Cracker"></span></p>
+      <p>I'm <span class="typed" data-typed-items="A Graphics Designer,A Programmer,An AI Developer,A Freelancer,A Bugs Cracker,A Class Represetative,An Event Coordinator"></span></p>
       <div class="social-links">
         <a href="https://www.twitter.com/RajkumarCmrit" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
         <a href="https://www.facebook.com/mr.raj.official.profile" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
@@ -207,7 +207,7 @@
                   <div class="count-box">
                     <i class="icofont-clock-time"></i>
                     <span data-toggle="counter-up">2</span>
-                    <p><strong>Five year</strong> working experience on languages. Like, C, C++, JavaFx, Python, and Servlet etc.</p>
+                    <p><strong>Two year</strong> working experience on languages. Like, C, C++, JavaFx, Python, and Servlet etc.</p>
                   </div>
                 </div>
 
@@ -423,9 +423,83 @@
     </section><!-- End Resume Section -->
 
     <!-- ======= Team Section ======= -->
-    <section id="cliens" class="cliens section-bg">
-      <div class="container"></div>
-    </section>
+    <section id="certificate" class="team section-bg">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>The Code Insider Events</h2>
+        </div>
+
+        <div class="row">
+
+		  <div class="col-lg-6 mt-4">
+            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="0">
+              <div class="pic"><a href="assets/img/event/p2.png"><img id="img2" src="assets/img/event/p2.png" style="width:280px; height:100px;" class="img-fluid" alt=""></a></div>
+              <div class="member-info">
+                <h4>The Code Insider 1.2</h4>
+                <span>The technical event on Python as a Coding Contest, Organized by Protocol Club, CMR Institute of Technology, Bangalore.</span>
+                <p>Date: 07th, Sept'20 - 09th, Sept'20</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 mt-4">
+            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="0">
+              <div class="pic"><a href="assets/img/event/p1.png"><img id="img2" src="assets/img/event/p1.png" style="width:280px; height:100px;" class="img-fluid"  alt=""></a></div>
+              <div class="member-info">
+                <h4>The Code Insider 1.1</h4>
+                <span>The technical event on JAVA as a Coding Contest, Organized by Protocol Club, CMR Institute of Technology, Bangalore.</span>
+                <p>Date: 24th, Aug'20</p>
+              </div>
+            </div>
+          </div>
+
+		  <!--div class="col-lg-6 mt-4">
+            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="0">
+              <div class="pic"><a href=""><img id="img2" src="" class="img-fluid" style="width:280px; height:98px;" alt=""></a></div>
+              <div class="member-info">
+                <h4>...</h4>
+                <span>...</span>
+                <p>..</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 mt-4">
+            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="0">
+              <div class="pic"><a href=""><img id="img2" src="" class="img-fluid" alt=""></a></div>
+              <div class="member-info">
+                <h4></h4>
+                <span>.</span>
+                <p></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 mt-4">
+            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic"><a href=""><img id="img2" src="" class="img-fluid" style="width:340px; height:100px;" alt=""></a></div>
+              <div class="member-info">
+                <h4></h4>
+                <span></span>
+                <p></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 mt-4">
+            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic"><a href="#" class="img-fluid" style="width:340px; height:100px;" alt=""></a></div>
+              <div class="member-info">
+                <h4>#</h4>
+                <span>...</span>
+                <p>..</p>
+              </div>
+            </div>
+          </div-->
+
+        </div>
+
+      </div>
+    </section><!-- End Team Section -->
   </main><!-- End #main -->
 
      <!-- ======= Contact Section ======= -->
