--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Raj Kumar Sony</h1>
-      <p>I'm <span class="typed" data-typed-items="A Graphics Designer,A Programmer,An AI Developer,A Freelancer,A Bugs Cracker,A Class Represetative,An Event Coordinator"></span></p>
+      <p>I'm <span class="typed" data-typed-items="A Graphics Designer,A Programmer,An AI Developer, A Freelancer,A Bugs Cracker, Web Developer, A Class Represetative, An Event Coordinator"></span></p>
       <div class="social-links">
         <a href="https://www.twitter.com/RajkumarCmrit" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
         <a href="https://www.facebook.com/mr.raj.official.profile" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
