--- a/index.html
+++ b/index.html
@@ -412,9 +412,9 @@
               <p><em>Durga Software Solutions, Hyderabad</em></p>      
             </div>
             <div style="margin-top: 50px; text-align: center;">
-              <h4 style="margin-bottom: 30px;">Download My Resume</h4>
-              <a href="#" target="_blank" class="get-started-btn scrollto" style="margin-left: 40px; margin-right: 10px;">Download Now</a>
-              <a href="https://web.whatsapp.com/send?phone=918252444848&text=I wanna talk with you regarding projects. Please, respond to me." target="_blank" class="get-started-btn scrollto">WhatsApp Chat</a>     
+              <h4 style="margin-bottom: 30px;">Join Me In WhatsApp</h4>
+              <a href="https://web.whatsapp.com/send?phone=918252444848&text=I wanna talk with you regarding projects. Please, respond to me." target="_blank" class="get-started-btn scrollto"  style="margin-left: 40px; margin-right: 10px;">WhatsApp Chat</a>
+              <a href="https://chat.whatsapp.com/ChvARfqQXzKBKBf4SYvFj0" target="_blank" class="get-started-btn scrollto">Event Group</a>     
             </div>
           </div>
         </div>
@@ -434,7 +434,7 @@
 
 		  <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="0">
-              <div class="pic"><a href="assets/img/event/p2.png"><img id="img2" src="assets/img/event/p2.png" style="width:280px; height:120px;" class="img-fluid" alt=""></a></div>
+              <div class="pic"><a href="assets/img/event/p2.png"><img id="img2" src="assets/img/event/p2.png" style="width:290px; height:110px;" class="img-fluid" alt=""></a></div>
               <div class="member-info">
                 <h4>The Code Insider 1.2</h4>
                 <span>The technical event on Python as a Coding Contest, Organized by Protocol Club, CMR Institute of Technology, Bangalore.</span>
