--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 	/* On smaller screens, decrease text size */
 	@media only screen and (max-width: 300px) {
   		.text {font-size: 11px}
-	}
+  }
+  
   </style>
 
 
@@ -143,11 +144,18 @@
               </div>
               <div class="col-lg-6" style="padding-right: 10px;">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 23</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 23 Years Old</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Master's in MCA</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Website:</strong><a href="https://bugscracker.github.io/" target="_blank"> www.bugscracker.github.io</a></li>
                   <li><i class="icofont-rounded-right"></i> <strong>Github:</strong><a href="https://www.github.com/RajkumarSony" target="_blank"> www.github.com/RajkumarSony</a></li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Bangalore, India</li>
+                </ul>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-12">
+                <ul>
+                  <li><i class="icofont-rounded-right"></i> <strong>Hobbies:</strong> Playing Chess, Listening Songs, Implementing Innovative Ideas, and Doing Some Creativity etc.</li>
                 </ul>
               </div>
             </div>
@@ -257,7 +265,7 @@
             <div class="progress">
               <span class="skill">CSS <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -269,9 +277,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Bootstrap 4<i class="val">80%</i></span>
+              <span class="skill">Bootstrap 4<i class="val">60%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -287,37 +295,37 @@
           <div class="col-lg-5">
 
             <div class="progress">
-              <span class="skill">Java <i class="val">80%</i></span>
+              <span class="skill">Java <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Servlet & JSP <i class="val">70%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Python <i class="val">80%</i></span>
+              <span class="skill">Servlet & JSP <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Django <i class="val">60%</i></span>
+              <span class="skill">Python <i class="val">70%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Django <i class="val">50%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Qt Creator<i class="val">40%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Android <i class="val">40%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
           </div>
@@ -355,8 +363,8 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="">Android Development</a></h4>
-              <p class="description">I have good experience of Android Development by using Kotlin.</p>
+              <h4 class="title"><a href="">Desktop Application</a></h4>
+              <p class="description">I have good experience of JavaFx and Qt Creator for developing Desktop Application.</p>
             </div>
           </div>
 
@@ -385,40 +393,101 @@
 
         <div class="row">
           <div class="col-lg-6">
-
-            <h3 class="resume-title">Education</h3>
-            <div class="resume-item">
-              <h4>Master of Computer Application</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Pursuing from CMR Institute of Technology, Bangalore</em></p>
-              <p>Affiliated to Visvesvaraya Technological University, Belagavi.</p>
-              <ul>
-              	<li><p>Final Per(%) Marks : 75.75% - 1st Semester</p></li>
-              </ul>
+            <div class="row-lg-1">
+              <h3 class="resume-title">Achievements</h3>
+              <div class="resume-item">
+                <h4>1st Place in "Code In The Dark" Event</h4>
+                <h5>Nov 29th-30th, 2019</h5>&nbsp;<h5><a href="https://drive.google.com/file/d/1CUXj-QA0tQo5l_f4HeYS7tM-MI7Vcebx/view?usp=sharing" target="_blank">Review</a></h5>
+                <p><em>Rakuten Presents - INSPIRON 19.0</em></p> 
+                <p>University Visvesvaraya College of Engineering, Bangalore.</p>     
+              </div>
             </div>
-            <div class="resume-item">
-              <h4>Bachelor of Computer Application</h4>
-              <h5>2015 - 2018</h5>
-              <p><em>Graduated from S.N. Sinha College, Aurangabad, Bihar</em></p>
-              <p>Affiliated to Magadh University, Bodh Gaya, Bihar.</p>
-              <ul><li>Final Per(%) Marks : 70.75% - All Semester</p></li></ul>
+            <div class="row-lg-1" style="margin-top: 40px;">
+              <h3 class="resume-title">Educations</h3>
+              <div class="resume-item">
+                <h4>Master of Computer Application</h4>
+                <h5>2019 - Present</h5>
+                <p><em>Pursuing from CMR Institute of Technology, Bangalore</em></p>
+                <p>Affiliated to Visvesvaraya Technological University, Belagavi.</p>
+                <ul>
+                  <li><p>Final Per(%) Marks : 75.75% - 1st Semester</p></li>
+                  <li><p>Final Per(%) Marks : 84.22% - 2nd Semester</p></li>
+                </ul>
+              </div>
+              <div class="resume-item">
+                <h4>Bachelor of Computer Application</h4>
+                <h5>2015 - 2018</h5>
+                <p><em>Graduated from S.N. Sinha College, Aurangabad, Bihar</em></p>
+                <p>Affiliated to Magadh University, Bodh Gaya, Bihar.</p>
+                <ul><li>Final Per(%) Marks : 70.75% - (Including All)</p></li></ul>
+              </div>
+              <div class="resume-item">
+                <h4>Inter Vocational Computer Science</h4>
+                <h5>2013 - 2015</h5>
+                <p><em>Passed from Anugrah Inter College, Aurangabad, Bihar</em></p>
+                <p>Under Bihar School Examination Board, Patna.</p>
+                <ul><li>Final Per(%) Marks : 64.33% - (Including All)</p></li></ul>
+              </div>
             </div>
           </div>
           <div class="col-lg-6">
-            <h3 class="resume-title">Professional Experience</h3>
-            <div class="resume-item">
-              <h4>Certification On Java, Adv. Java & Oracle</h4>
-              <h5>Nov 2018 - Feb 2019</h5>
-              <p><em>Durga Software Solutions, Hyderabad</em></p>      
-            </div>
-            <div style="margin-top: 50px; text-align: center;">
-              <h4 style="margin-bottom: 30px;">Join Me In WhatsApp</h4>
-              <a href="https://web.whatsapp.com/send?phone=918252444848&text=I wanna talk with you regarding projects. Please, respond to me." target="_blank" class="get-started-btn scrollto"  style="margin-left: 40px; margin-right: 10px;">WhatsApp Chat</a>
-              <a href="https://chat.whatsapp.com/ChvARfqQXzKBKBf4SYvFj0" target="_blank" class="get-started-btn scrollto">Event Group</a>     
+            <div class="row-lg-1">
+              <h3 class="resume-title">Certifications</h3>
+              <div class="resume-item">
+                <h4>Certification On Java, Adv. Java & Oracle</h4>
+                <h5>Nov 2018 - Feb 2019</h5>&nbsp;<h5><a href="https://drive.google.com/file/d/1wKdzwZaWv8r0YAz78tiAGcT503BqGWMH/view?usp=sharing" target="_blank">Review</a></h5>
+                <p><em>Durga Software Solutions, Hyderabad.</em></p>
+                <p></p>      
+              </div>
+              <div class="resume-item">
+                <h4>Microsoft : Virtual Experience Program</h4>
+                <h5>Aug 26th, 2020</h5>&nbsp;<h5><a href="https://drive.google.com/file/d/1qCcMLdRTDZ0eX5Y9YSFE6Wz4pO7y3a7l/view?usp=sharing" target="_blank">Review</a></h5>
+                <p><em>InsideSherpa, Microsoft Corporation.</em></p>
+                <p></p>      
+              </div>
+              <div class="resume-item">
+                <h4>Microsoft AI Classroom Series</h4>
+                <h5>Dec 22th, 2020</h5>&nbsp;<h5><a href="https://drive.google.com/file/d/180WdOUokENIrTwcCDeuoKJKDJcWyequJ/view?usp=sharing" target="_blank">Review</a></h5>
+                <p><em>NASSCOM, Microsoft Corporation.</em></p>
+                <p></p>      
+              </div>
+              <div class="resume-item">
+                <h4>Digital Skills : Artificial Intellience</h4>
+                <h5>Dec 22th, 2020</h5>&nbsp;<h5><a href="https://drive.google.com/file/d/1CwMkyWAo6tZFffuDamO3pgJeyi0kJlar/view?usp=sharing" target="_blank">Review</a></h5>
+                <p><em>Future Learn, Accenture.</em></p>
+                <p></p>      
+              </div>
+              <div class="resume-item">
+                <h4>Advent of Cyber 2020 (Cyber Security)</h4>
+                <h5>Dec 29th, 2020</h5>&nbsp;<h5><a href="https://drive.google.com/file/d/11000OXWkHD45XkP-T0xoi8vgLoNTRUPY/view?usp=sharing" target="_blank">Review</a></h5>
+                <p><em>TryHackMe.</em></p>
+                <p></p>      
+              </div>
+              <div class="resume-item">
+                <h4>Google Cloud Community Days India</h4>
+                <h5>Jan 22th-23th, 2021</h5>&nbsp;<h5><a href="https://drive.google.com/file/d/1QmTAyKXGlQomLrENY8REhngxO0OHU2my/view?usp=sharing" target="_blank">Review</a></h5>
+                <p><em>Google Cloud Communities.</em></p>
+                <p></p>      
+              </div>
+              
             </div>
           </div>
         </div>
-
+        <hr>
+        <div class="row">
+          <div class="col-lg-6">
+            <div style="margin-top: 50px; text-align: center;">
+              <h4 style="margin-bottom: 30px;">My Resume</h4>
+              <a href="https://drive.google.com/file/d/1sUGg4a9GdPd6yxuEHvBdALqObDdBf_p4/view?usp=sharing" target="_blank" class="get-started-btn scrollto" style="margin-left: 20px; margin-right: 20px;">Download Resume</a>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div style="margin-top: 50px; text-align: center;">
+              <h4 style="margin-bottom: 30px;">Text Me</h4>
+              <a href="https://web.whatsapp.com/send?phone=918252444848&text=I wanna talk with you regarding projects. Please, respond to me." target="_blank" class="get-started-btn scrollto"  style="margin-left: 20px; margin-right: 20px;">WhatsApp Chat</a>    
+            </div>
+          </div>
+        </div>
       </div>
     </section><!-- End Resume Section -->
 
@@ -517,7 +586,7 @@
               <div class="col-lg-4 address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>House No. 12,<br>
+                <p>House No. #12,<br>
               	   Old Post Office Road, Jamhore,<br>
                    Aurangabad(BR) - 824121.<br>
                </p>
@@ -537,6 +606,7 @@
                    +91 6202875007</p>
               </div>
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3620.4501403475765!2d84.3216857143708!3d24.84847105185902!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x398d01089515da95%3A0xe1bb7db261f5253a!2sRajkumar%20Sony!5e0!3m2!1sen!2sin!4v1595179489880!5m2!1sen!2sin" style="border:0; width: 100%; height: 290px;" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+              <iframe width="640px" height= "480px" src= "https://forms.office.com/Pages/ResponsePage.aspx?id=tv2HHB0FpEOnPK1t5PrFsgQMZwcvN1dKjMxhNAw89ThUNjk4WVRJM1c3RFdHTFU3WDJJQkxQSUhMOS4u&embed=true" frameborder= "0" marginwidth= "0" marginheight= "0" style= "margin-top:30px; border: none; width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
             </div>
 
           </div>
