--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p style="font-family: Cambria; font-size: 18px;"><em>My name is Raj Kumar Sony and i am currently pursuing a Master's degree in Computer Science (MCA) from CMR Institute of technology, Bangalore. I was born and raised in the heart of India (Bihar) and grew up a very outgoing and active child. Always staying proactive, I ventured into a lot of different activities to show my talent. I have frequently used my creativity to bring a lot of entrepreneurial ideas to life. I started a group called The Bugs Crackers, an organization where friends come to discuss their deepest and most inspirational ideas. I want to become an entrepreneur so that I can take my many talents to the next level and take control of my economic future. My desire is to reach toward a higher standard and prove to myself that I have the talent and skills to realize my dreams, while also setting a positive example for those that come behind me.</em></p>
+          <p style="font-family: Cambria; font-size: 18px;"><em>I am Raj Kumar Sony, Pusuing 2nd year MCA at CMR Institute of Technology, Bangalore. I want to secure a challenging position that utilizes my years of experience and to work in a dynamic environment to keep adding value to the organization, while allowing me the opportunity to grow professionally and also concurrently upgrading my skills and existing knowledge.</em></p>
         </div>
 
         <div class="row slideshow-container" style="margin-top: 30px;">
@@ -478,7 +478,7 @@
           <div class="col-lg-6">
             <div style="margin-top: 50px; text-align: center;">
               <h4 style="margin-bottom: 30px;">My Resume</h4>
-              <a href="https://drive.google.com/file/d/1sUGg4a9GdPd6yxuEHvBdALqObDdBf_p4/view?usp=sharing" target="_blank" class="get-started-btn scrollto" style="margin-left: 20px; margin-right: 20px;">Download Resume</a>
+              <a href="https://drive.google.com/file/d/1GK9wr1EKYTcje0g_nT5-x_rtCQ2USZnK/view?usp=sharing" target="_blank" class="get-started-btn scrollto" style="margin-left: 20px; margin-right: 20px;">Download Resume</a>
             </div>
           </div>
           <div class="col-lg-6">
